# forgelearn

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
src/forgelearn/: __init__.py  __main__.py  cli.py  config.py
src/forgelearn/agents/: __init__.py  base.py  claude.py  codex.py  codex_events.py  events.py  process.py
src/forgelearn/common/: __init__.py  errors.py  logging.py  types.py
src/forgelearn/frontend/: app.js  index.html  styles.css
src/forgelearn/orchestrator/: __init__.py  course_engine.py  engine.py  lesson_prompts.py  parsing.py  prompts.py  store.py
src/forgelearn/server/: __init__.py  app.py  course.py  learn.py  routes.py  sse.py  streams.py
src/forgelearn/storage/: __init__.py  export.py  json_store.py
src/forgelearn/workspace/: __init__.py  manager.py  runner.py
tests/: __init__.py  test_agents.py  test_agents_integration.py  test_cli.py  test_codex_events.py  test_codex_integration.py  test_config.py  test_course_api.py  test_course_engine.py  test_events.py  test_learn_api.py  test_orchestrator.py  test_prompts.py  test_server.py  test_storage.py  test_workspace.py
